<resources>
    <string name="app_name">TicketsDB</string>
    <string name="buy_ticket">Buy ticket</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="TooltipEmail">Fill with your email</string>
    <string name="TooltipPassword">Fill with a strong password</string>
    <string name="TooltipUserName">Fill with your full name</string>
    <string name="price">Price</string>
</resources>