<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:minWidth="480dp"
    android:minHeight="480dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/event_name"/>

    <TextView
        android:id="@+id/tvEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/event_description"/>

    <TextView
        android:id="@+id/tvEventPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/price"/>

    <Button
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_ticket"
        app:icon="@drawable/ic_buy" />
</LinearLayout>